# investigate-plum-performance

./: LICENSE  README.md  pyproject.toml
src/example_py_multiple_dispatch/: foo.py  zoo.py
test/: profile_zoo.py  test_foo.py  test_zoo.py
